Hide fixed header when the table is out of viewport

--- a/demo/styles.css
+++ b/demo/styles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    padding: 20rem 1rem;
+    padding: 20rem 1rem 100rem 1rem;
     margin: 0;
     background-color: #f2f2f2;
     font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
